<resources>
    <string name="app_name">Indice de Massa Corporea</string>
    <string name="action_settings">Settings</string>
    <string name="massa">Seu peso: </string>
    <string name="altura">Sua altura: </string>
    <string name="calc">Calcular</string>
    <string name="kg">kilograma</string>
    <string name="mt">metro</string>
    <string name="inf">Por eu não conseguir lembrar de alguns códigos, só ha a parte de design no programa!</string>
</resources>
