<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/massa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kg"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/met_alt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mt"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        />

    <Button
        android:id="@+id/BotaoCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inf"
        android:textSize="20dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/imagem_imc_legenda2"
        />

</LinearLayout>
